--- a/resources/views/emails/forgotpassword.edge
+++ b/resources/views/emails/forgotpassword.edge
@@ -1,4 +1,5 @@
-<h2> Olá {{ name }},</h2>
+{{ script('forgotpassword')}}
+<div class="Nome"><h2> Olá {{ name }},</h2></div>
 
 <p>Parace que você esqueceu sua senha. Caso queira prosseguir clique no link abaixo:</p>
 <p><a href="{{ resetPasswordUrl }}" target="_black" >Recuperar senha</a></p>
